--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             <!-- Hero Image Placeholder -->
             <div class="lg:w-1/2 w-full">
                 <div class="relative rounded-3xl overflow-hidden shadow-2xl border-4 border-white transform rotate-2 hover:rotate-0 transition-all duration-500">
-                    <!-- UPDATED: Simplified filename for Hero Image -->
                     <img src="hero.jpg" onerror="this.src='https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80'" alt="جلسه توانمندسازی" class="w-full h-auto object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-primary/60 to-transparent flex items-end p-8">
                         <div class="text-white">
@@ -131,11 +130,13 @@
             <p class="text-sm text-muted-foreground">واحد فناور عارضه‌یابی شده</p>
           </div>
           <div>
-            <p class="text-4xl font-bold text-primary mb-2">41%</p>
+            <!-- UPDATED: Changed to 27% based on user request -->
+            <p class="text-4xl font-bold text-primary mb-2">27%</p>
             <p class="text-sm text-muted-foreground">چالش عدم نیاز بازار</p>
           </div>
           <div>
-            <p class="text-4xl font-bold text-primary mb-2">27%</p>
+            <!-- UPDATED: Changed to 41% based on user request -->
+            <p class="text-4xl font-bold text-primary mb-2">41%</p>
             <p class="text-sm text-muted-foreground">شکاف عمیق با صنعت</p>
           </div>
           <div>
@@ -273,25 +274,28 @@
                 <p class="text-muted-foreground">تصاویری از جلسات عارضه‌یابی و رویدادهای برگزار شده</p>
             </div>
             <div class="grid md:grid-cols-3 gap-6">
+                <!-- Gallery Item 1 -->
                 <div class="group relative overflow-hidden rounded-2xl shadow-md h-64 bg-slate-200">
-                    <!-- UPDATED: Simplified filename for Gallery Image 1 -->
                     <img src="gallery-1.jpg" onerror="this.src='https://images.unsplash.com/photo-1517048676732-d65bc937f952?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'" alt="Bootcamp Session" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
-                        <p class="text-white font-bold">جلسات منتورینگ</p>
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
+                        <p class="text-white font-bold leading-tight">شبکه‌سازی با اعضای اکوسیستم نوآوری</p>
                     </div>
                 </div>
+                
+                <!-- Gallery Item 2 -->
                 <div class="group relative overflow-hidden rounded-2xl shadow-md h-64 bg-slate-200">
-                    <!-- UPDATED: Simplified filename for Gallery Image 2 -->
                     <img src="gallery-2.jpg" onerror="this.src='https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'" alt="Team Building" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
-                        <p class="text-white font-bold">کارگاه‌های تیم‌سازی</p>
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
+                        <p class="text-white font-bold leading-tight">ایجاد "زبان مشترک" با دعوت از نمایندگان صنایع بزرگ استان</p>
                     </div>
                 </div>
+                
+                <!-- Gallery Item 3 -->
                 <div class="group relative overflow-hidden rounded-2xl shadow-md h-64 bg-slate-200">
-                    <!-- UPDATED: Simplified filename for Gallery Image 3 -->
                     <img src="gallery-3.jpg" onerror="this.src='https://images.unsplash.com/photo-1524178232363-1fb2b075b955?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'" alt="Park Building" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
-                        <p class="text-white font-bold">ساختمان پارک علم و فناوری</p>
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/90 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col justify-end p-6">
+                        <p class="text-white font-bold text-lg mb-1">کارگاه‌های عمیق</p>
+                        <p class="text-slate-300 text-sm font-normal leading-tight">تمرکز بر «اعتبارسنجی ایده» و «مهارت‌های نرم تیمی»</p>
                     </div>
                 </div>
             </div>
