--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="lg:w-1/2 text-center lg:text-right">
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-primary/5 border border-primary/10 text-primary text-sm font-semibold mb-6">
                     <span class="w-2 h-2 rounded-full bg-accent animate-pulse"></span>
-                    کارگزار رسمی آموزش و توانمندسازی پارک علم و فناوری خوزستان
+                    شرکت آسان تجارت هوشمند صبا | کارگزار رسمی آموزش و توانمندسازی پارک علم و فناوری خوزستان
                 </div>
                 <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold text-primary mb-6 leading-tight">
                     مدل اجرایی <span class="text-transparent bg-clip-text bg-gradient-primary">اثبات شده</span><br>
@@ -130,12 +130,10 @@
             <p class="text-sm text-muted-foreground">واحد فناور عارضه‌یابی شده</p>
           </div>
           <div>
-            <!-- UPDATED: Changed to 27% based on user request -->
             <p class="text-4xl font-bold text-primary mb-2">27%</p>
             <p class="text-sm text-muted-foreground">چالش عدم نیاز بازار</p>
           </div>
           <div>
-            <!-- UPDATED: Changed to 41% based on user request -->
             <p class="text-4xl font-bold text-primary mb-2">41%</p>
             <p class="text-sm text-muted-foreground">شکاف عمیق با صنعت</p>
           </div>
@@ -486,7 +484,7 @@
       <div class="container mx-auto px-4">
         <div class="max-w-3xl mx-auto text-center">
           <h2 class="text-3xl font-bold text-primary mb-8">
-            ارتباط با کارگزار توانمندسازی
+            ارتباط با شرکت آسان تجارت هوشمند صبا
           </h2>
           
           <div class="bg-slate-50 p-8 rounded-2xl border border-slate-100 flex flex-col md:flex-row justify-around items-center gap-8">
@@ -519,7 +517,7 @@
           </div>
           
           <div class="mt-8">
-             <p class="text-sm text-muted-foreground">وب‌سایت: asantejarathoushmandsaba.ir</p>
+             <p class="text-sm text-muted-foreground">تمامی حقوق برای شرکت آسان تجارت هوشمند صبا محفوظ است.</p>
           </div>
         </div>
       </div>
